--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "description": "[![Actions Status](https://github.com/QupolTwoTimes/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/QupolTwoTimes/frontend-project-44/actions)",
   "main": "index.js",
   "type": "module",
