--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,10 +6,9 @@ overrides: []
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules: 
-	no-console: 0
-
-  	import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
-    	- error
-    	- ignorePackages
-    	- js: always
+rules: {
+	no-console: 0,
+	
+        import/extensions: 0
+}
+  	
