fixed the whole project

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "brain-progression": "bin/brain-progression.js",
     "brain-prime": "bin/brain-prime.js"
   },
-  "description": "This project is a set of 5 math games [![Actions Status](https://github.com/QupolTwoTimes/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/QupolTwoTimes/frontend-project-44/actions)",
+  "description": "This project is a set of 5 math games (https://github.com/QupolTwoTimes/frontend-project-44/actions)",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
